static/css/style.css
/* ... */
.navbar-origin .navbar-collapse .col-6:nth-last-of-type(1),
.navbar-origin .navbar-collapse .nav-item:nth-last-of-type(2) {
  padding-bottom: 20px;
}

.navbar-origin .navbar-collapse .col-6 .nav-link {
  font-size: 0.875rem;
  font-weight: 400;
  padding-left: 0px;
}

.navbar-origin .navbar-collapse .col-6 .nav-link:active,
.navbar-origin .navbar-collapse .col-6 .nav-link:hover,
.navbar-origin .navbar-collapse .col-6 .nav-link.selected {
  opacity: 0.75;
}

.navbar-origin .navbar-collapse .nav-item {
  padding: 0px;
}

.navbar-origin .navbar-collapse .nav-item.dropdown {
  padding: 0px;
}

.navbar-toggler {
  cursor: pointer;
  height: 30px;
  width: 44px;
}

.navbar-origin .navbar-toggler .close-icon {
  display: none;
  margin-bottom: 2px;
}

.navbar-origin .navbar-toggler .globe-icon {
  margin-bottom: 2px;
}

.navbar-origin .navbar-toggler .menu-icon {
  margin-bottom: 3px;
}

.navbar-dark .navbar-toggler,
.navbar-light .navbar-toggler {
  border-width: 0;
}

.navbar-dark .nav-item .nav-link,
.navbar-dark .navbar-collapse .col-6 .nav-link,
.navbar-dark .navbar-toggler i {
  color: #fff;
}

.navbar-dark .navbar-toggler i:active,
.navbar-dark .navbar-toggler i:hover {
  color: #dfe6ea;
}

.navbar-light .nav-item .nav-link,
.navbar-light .navbar-collapse .col-6 .nav-link {
  color: #111d28;
}

.navbar-light .navbar-toggler i {
  color: #98a7b4;
}

.navbar-light .navbar-collapse .col-6 .nav-link:active,
.navbar-light .navbar-collapse .col-6 .nav-link:hover,
.navbar-light .navbar-toggler i:active,
.navbar-light .navbar-toggler i:hover,
.navbar-light .nav-item .nav-link:active,
.navbar-light .nav-item .nav-link:hover {
  color: rgba(0, 0, 0, .7);
}

#rtl .dropdown-toggle::after {
  margin: 0 0.255em 0 0;
}

.dropdown-menu {
  z-index: 100000;
  background-color: #ebf0f3;
}

.language .dropdown-item  {
  text-transform: capitalize;
  width: 100%;
  display: block;
  padding: .25rem 1.5rem;
  color: #007bff;
}

.language .dropdown-item:hover {
  background-color: #007bff;
  color: #fff;
}

.language .dropdown-item-selected {
  text-transform: capitalize;
  width: 100%;
  color: #000;
  padding: .25rem 1.5rem;
}

.row-pane {
  margin-left: 0px;
  margin-right: 0px;
}

.container-panes {
  position: relative;
}

.col-pane {
  padding-left: 0px;
  padding-right: 0px;
}

.background-panes {
  position: absolute;
}

.background-panes .row-pane:not(:first-of-type) {
  height: 100%;
}

.background-panes.bottom-panes {
  bottom: 0px;
  display: flex;
  flex: 1;
  left: 0px;
}

.background-panes.bottom-panes > .align-items-end {
  flex: 1;
}

.foreground-content {
  position: relative;
  z-index: 100;
}

.core-team-bottom-pane,
.platform-bottom-pane {
  background-color: #fff;
  flex: 1;
}

.left-upper-pane {
  -webkit-clip-path: polygon(0 100%, 100% 0, 0 0);
  clip-path: polygon(0 100%, 100% 0, 0 0);
  padding-top: 57.735026918%;
}

.right-upper-pane {
  -webkit-clip-path: polygon(100% 0, 0 0, 100% 100%);
  clip-path: polygon(100% 0, 0 0, 100% 100%);
  padding-top: 57.735026918%;
}

.left-lower-pane {
  -webkit-clip-path: polygon(0 100%, 0 0, 100% 100%);
  clip-path: polygon(0 100%, 0 0, 100% 100%);
  padding-top: 57.735026918%;
}

.right-lower-pane {
  -webkit-clip-path: polygon(0 100%, 100% 0, 100% 100%);
  clip-path: polygon(0 100%, 100% 0, 100% 100%);
  padding-top: 57.735026918%;
}

.indented {
  border: 1px solid #dee0e2;
}

#ltr .indented {
  border-width: 0px 0px 0px 1px;
  padding: 0px 0px 0px 20px;
}

#rtl .indented {
  border-width: 0px 1px 0px 0px;
  padding: 0px 20px 0px 0px;
}

/*
 * Right-to-left languages: Swap left/right pane graphics
 * See: https://meiert.com/en/blog/css-how-to-host-right-to-left-styling/
 */
#rtl .left-upper-pane {
  -webkit-clip-path: polygon(100% 0, 0 0, 100% 100%);
  clip-path: polygon(100% 0, 0 0, 100% 100%);
  padding-top: 57.735026918%;
}

#rtl .right-upper-pane {
  -webkit-clip-path: polygon(0 100%, 100% 0, 0 0);
  clip-path: polygon(0 100%, 100% 0, 0 0);
  padding-top: 57.735026918%;
}

#rtl .left-lower-pane {
  -webkit-clip-path: polygon(0 100%, 100% 0, 100% 100%);
  clip-path: polygon(0 100%, 100% 0, 100% 100%);
  padding-top: 57.735026918%;
}

#rtl .right-lower-pane {
  -webkit-clip-path: polygon(0 100%, 0 0, 100% 100%);
  clip-path: polygon(0 100%, 0 0, 100% 100%);
  padding-top: 57.735026918%;
}

.btn-container {
  margin: 60px auto;
}

.btn:hover {
  cursor: pointer;
}

footer {
  padding: 78px 0px 78px;
}

.dark-footer {
  color: #fff;
  background-color: #2e3f53;
}
.dark-footer a, .dark-footer a:not([href]):not([tabindex]) {
  color: #fff;
  cursor: pointer;
}
.dark-footer a:hover {
  opacity: 0.75;
}

.light-footer {
  color: #455d75;
  background-color: #fff;
}

.light-footer a, .light-footer a:not([href]):not([tabindex]) {
  color: #455d75;
  cursor: pointer;
}
.light-footer a:hover {
  opacity: 0.75;
}

footer .logo-container {
  margin: 40px auto;
}

footer p {
  font-size: 0.75rem;
}

footer .footer-header {
  margin: 40px auto 15px auto;
  font-weight: 400;
  font-size: 0.875rem;
}

footer .footer-links {
  list-style-type: none;
  padding-left: 0px;
}

#rtl footer .footer-links {
  padding-right: 0px;
}

footer .footer-link {
  margin: 15px auto;
  font-size: 0.875rem;
}

footer .logo-container {
  margin: 40px auto 20px auto;
}

footer .company-mission {
  max-width: 360px;
  margin-left: 0px;
}

#rtl footer .company-mission {
  margin-right: 0px;
}

/* Alertify */

.alertify-log {
  padding: 20px;
  border-radius: 4px;
  color: #212529;
  font-size: 18px;
  font-weight: 400;
  text-align: center;
  box-shadow: 1px 1px 20px 0 rgba(0, 0, 0, 0.25);
  cursor: pointer;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='25' height='30'><line x1='5' y1='10' x2='15' y2='20' stroke='%23bbb' stroke-width='2'/><line x1='15' y1='10' x2='5' y2='20' stroke='%23bbb' stroke-width='2'/></svg>");
  background-repeat: no-repeat;
  background-position: right top;
  background-color: #ebf0f3;
}
/* ... */

